# hajduk-detector

./: .gitignore  README.md  bun.lockb  eslint.config.js  package.json  postcss.config.cjs  prettier.config.js  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
app/: index.html  package-lock.json  package.json  tailwind.config.cjs
app/src/: App.module.css  App.tsx  main.tsx  reset.css  styles.css
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: main.rs
app/src/mocks/: mock.json  scraped.json
app/src/views/HomeView/: HomeView.module.css  HomeView.tsx
app/src/views/HomeView/partials/Schedule/: Schedule.tsx
backend/: Cargo.toml  sqlite.db  testing.http
backend/migrations/2023-11-13-101603_create_games/: up.sql
backend/src/: api.rs  database.rs  main.rs
backend/src/api/: endpoints.rs  fairings.rs
backend/src/database/: models.rs  queries.rs  schema.rs
scraper/: scraper.py
scraper/utils/: constants.py  helpers.py
src/: App.tsx  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml
src/mocks/: mock.json
src/views/HomeView/: HomeView.module.css  HomeView.tsx
src/views/HomeView/partials/Schedule/: Schedule.module.css  Schedule.tsx
