[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
diesel = { version = "2.1.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
dotenvy = "0.15"
rocket_sync_db_pools = { version = "0.1.0-rc.4", features = [
    "diesel_sqlite_pool",
] }
diesel_migrations = "2.1.0"
